# prady-os

./: .gate9_discovery.txt  .gate9_edited_files.txt  .gate9_replace.ps1  .gitattributes  .gitignore  .gitmodules  ARCHITECTURE.md  CHANGELOG.md  HONEST_LIMITATIONS.md  LICENSE  Makefile  PRODUCTION_AUDIT_REPORT.md  README.md  RELEASE.md  RUNBOOK.md  SECURITY.md  cmd1_pytest_output.txt  docker-compose.dev.yml  docker-compose.yml  phase_f_validation.ps1  pytest.ini  pytest.py  sitecustomize.py  test_agent-runtime.txt  test_computer-use.txt  test_model-manager.txt  test_oobe.txt  test_results.txt  test_results_agentnet.txt  test_soul.txt  tmp-exec-output.txt
ai-core/ahnis/: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  MISSION.md  README.md  ROADMAP.md  SECURITY.md  main.py  openarena-claim.txt  pyproject.toml  requirements.txt
ai-core/ahnis/.agents/plugins/: marketplace.json
ai-core/ahnis/.claude-plugin/: .mcp.json  README.md  marketplace.json  plugin.json
ai-core/ahnis/.claude-plugin/commands/: help.md  init.md  mine.md  search.md  status.md
ai-core/ahnis/.claude-plugin/hooks/: hooks.json  mempal-precompact-hook.sh  mempal-stop-hook.sh
ai-core/ahnis/.codex-plugin/: README.md  plugin.json
ai-core/ahnis/.devcontainer/: devcontainer.json
ai-core/ahnis/AHNIS/: README.md  __main__.py  cli.py  closet_llm.py  embedding.py  hooks_cli.py  layers.py  llm_client.py  palace.py  repair.py  searcher.py  spellcheck.py
ai-core/ahnis/AHNIS/backends/: chroma.py
ai-core/ahnis/AHNIS/i18n/: __init__.py  be.json  de.json  en.json  id.json  pt-br.json
ai-core/ahnis/AHNIS/instructions/: help.md  search.md
ai-core/ahnis/ahnis/: __init__.py  config.py  convo_miner.py  convo_scanner.py  corpus_origin.py  dedup.py  dialect.py  diary_ingest.py  entity_detector.py  entity_registry.py  fact_checker.py  hooks_cli.py  instructions_cli.py  knowledge_graph.py  llm_refine.py  mcp_server.py  migrate.py  miner.py  normalize.py  onboarding.py  palace_graph.py  project_scanner.py  query_sanitizer.py  room_detector_local.py  split_mega_files.py  sweeper.py  version.py
ai-core/ahnis/app/: embeddings.py  main.py  persistence.py
ai-core/ahnis/benchmarks/: BENCHMARKS.md  HYBRID_MODE.md  README.md  convomem_bench.py  locomo_bench.py  longmemeval_bench.py  mine_bench.py
ai-core/ahnis/docs/: CLOSETS.md  HISTORY.md
ai-core/ahnis/examples/: HOOKS_TUTORIAL.md  basic_mining.py  convo_import.py  gemini_cli_setup.md  mcp_setup.md
ai-core/ahnis/hooks/: README.md  mempal_save_hook.sh
ai-core/ahnis/landing/: index.html
ai-core/ahnis/tests/: conftest.py  test_ahnis.py  test_backends.py  test_claude_plugin_hook_wrappers.py  test_cli.py  test_closet_llm.py  test_closets.py  test_collection_metric_invariant.py  test_config.py  test_config_extra.py  test_convo_miner.py  test_convo_miner_size_cap.py  test_convo_miner_unit.py  test_convo_scanner.py  test_corpus_origin.py  test_corpus_origin_integration.py  test_dedup.py  test_dialect.py  test_embedding.py  test_empty_chromadb_results.py  test_entity_detector.py  test_entity_registry.py  test_exporter.py  test_fact_checker.py  test_general_extractor.py  test_hall_detection.py  test_hnsw_capacity.py  test_hooks_cli.py  test_hooks_shell.py  test_hybrid_search.py  test_i18n.py  test_i18n_lang_case.py  test_init_gitignore_protection.py  test_instructions_cli.py  test_kg_thread_safety.py  test_knowledge_graph_extra.py  test_known_entities_registry.py  test_layers.py  test_llm_client.py  test_llm_refine.py  (+23 more)
ai-core/ahnis/website/: index.md  package.json
ai-core/neila/: .gitignore  BIBLE.md  Dockerfile  Makefile  README.md  build.sh  build_linux.sh  build_windows.ps1  launcher.py  main.py  neila.spec  pyproject.toml  requirements-launcher.txt  requirements.txt  server.py
ai-core/neila/app/: main.py  models.py  persistence.py
ai-core/neila/docs/: ARCHITECTURE.md  CHECKLISTS.md  CREATING_SKILLS.md  DEVELOPMENT.md
ai-core/neila/neila/: __init__.py  a2a_executor.py  a2a_server.py  a2a_task_store.py  agent.py  agent_startup_checks.py  agent_task_pipeline.py  chat_upload_api.py  config.py  consciousness.py  consolidator.py  context.py  context_compaction.py  deep_self_review.py  extension_isolated_deps.py  extension_loader.py  extensions_api.py  file_browser_api.py  improvement_backlog.py  launcher_bootstrap.py  llm.py  local_model.py  local_model_api.py  local_model_autostart.py  loop.py  loop_llm_call.py  loop_tool_execution.py  marketplace_api.py  memory.py  model_catalog_api.py  onboarding_wizard.py  platform_layer.py  pricing.py  provider_models.py  reflection.py  review.py  review_evidence.py  review_state.py  runtime_mode_policy.py  safety.py  (+20 more)
ai-core/neila/prompts/: CONSCIOUSNESS.md  SAFETY.md  SYSTEM.md
ai-core/neila/scripts/: build_repo_bundle.py  download_python_standalone.ps1  download_python_standalone.sh  pyi_rth_pythonnet.py  run_external_review.py
ai-core/neila/supervisor/: __init__.py  events.py  git_ops.py  message_bus.py  queue.py  state.py  workers.py
ai-core/neila/tests/: __init__.py  conftest_ouroboros_disabled.py  fixtures_mock_clawhub.py  fixtures_mock_llm.py  test_a2a_protocol.py  test_advisory_observability.py  test_advisory_preflight.py  test_advisory_workflow.py  test_advisory_workflow_ext.py  test_agent_effort.py  test_agent_python_env.py  test_agent_task_pipeline.py  test_block1_review_pipeline.py  test_broadcast_ws.py  test_browser_isolation.py  test_browser_tools_smoke.py  test_budget_limits.py  test_budget_tracking.py  test_bughunt_fixes.py  test_build_repo_bundle.py  test_build_scripts.py  test_cache_optimization.py  test_chat_js_contracts.py  test_chat_logs_ui.py  test_chat_provenance.py  test_chat_upload.py  test_ci_tool.py  test_claude_code_gateway.py  test_commit_gate.py  test_compaction.py  test_consciousness.py  test_consolidator.py  test_constitution.py  test_context.py  test_context_memory_overhaul.py  test_contracts.py  test_crash_report.py  test_deep_self_review.py  test_doc_context.py  test_docs_sync.py  (+125 more)
ai-core/neila/web/: app.js  index.html  onboarding.css  onboarding_template.html  settings.css  style.css
(+1075 files in other folders)
